Squashed commit of the following:
commit 070d62915f931e85ef4ca2da11e212273e36bf76
Author: Thib Guicherd-Callin <thib@cs.stanford.edu>
Date:   Wed Aug 9 23:05:33 2023 -0700

    Begin 2.8.0 release

commit 34d933da8664b82575e0bfd38d0785de8ff233fb
Author: Tom Lipkis <tal@pss.com>
Date:   Tue Aug 8 19:27:55 2023 -0700

    Add test for crawlable NamedArchivalUnit

commit 5fbe408bbc75f5a2d0b8da0b32aea6be38cce06c
Author: Tom Lipkis <tal@pss.com>
Date:   Tue Aug 8 12:24:47 2023 -0700

    Fix bug configuring hash padding

commit fdeb529c12c8c4527593b8282a5cf0e3311b604a
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Mon Aug 7 17:09:18 2023 -0700

    Fixed typo; minor refactor

commit bb2a7ada5829836900872f6f7f7005f1909c3051
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Mon Aug 7 16:53:46 2023 -0700

    Simplified SolrArtifactIndex's init(); better logging

commit 9aa4d92df30c5ca46dc2e2eb9efb57066f5addc7
Author: Tom Lipkis <tal@pss.com>
Date:   Fri Aug 4 20:20:58 2023 -0700

    Gate repair from publisher on au.isCrawlable(), not !au.isNamedArchivalUnit()

commit d851ed337847b0ae8b3f6e8754d7da43025f0b42
Author: Tom Lipkis <tal@pss.com>
Date:   Fri Aug 4 20:20:26 2023 -0700

    Add AU.isCrawlable()

commit 41eacfade62a5022214c9989408ae1115735c84a
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Fri Aug 4 17:45:48 2023 -0700

    Beefed up SolrArtifactIndex's init() and introduced retry

commit b882beea5a51369fc703ef909781272232ebd595
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Wed Aug 2 18:13:55 2023 -0700

    Use StreamUtil.readBytes()

commit 3b2c09cfeed7500f40aae7a75065025bbfc17835
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Wed Aug 2 17:09:31 2023 -0700

    Cosmetic

commit 0a0e1cda8ded018ab8067db2bc4f9fdbed7f5dca
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Wed Aug 2 17:00:44 2023 -0700

    Removed isCompressed argument from addArtifacts

commit 291750bf319fbf428cd7400e3628fee8ce383cac
Author: Tom Lipkis <tal@pss.co