@@ -359,7 +359,7 @@ public class TestRepairCrawler extends LockssTestCase {
     Map map = new HashMap();
     for (int ix = 0; ix < numPeers; ix++) {
       PeerIdentity id = theDaemon.findPeerIdentity("127.0.0."+ix);
-      map.put(id, new Long(10+ix));
+      map.put(id, Long.valueOf(10+ix));
     }
     idm.setAgeedForAu(mau, map);
   }
